--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
+title: fate
 subtitle: ''
-description: '这是一个演示站点'
+description: '人斩的个人博客'
 keywords:
-author: 橘子是橘猫
+author: 人斩
 language: zh-CN
 timezone: ''
 
@@ -95,7 +95,7 @@ ignore:
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: next
+theme: fluid
 
 # 永久链接
 abbrlink:
