--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,7 @@ author: 人斩
 language: zh-CN
 timezone: ''
 
+$ hexo new page about
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 url: http://yoursite.com
