--- a/_config.yml
+++ b/_config.yml
@@ -95,7 +95,7 @@ ignore:
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: next
+theme: hexo-theme-one
 
 # 永久链接
 abbrlink:
