--- a/themes/one/_config.yml
+++ b/themes/one/_config.yml
@@ -96,7 +96,7 @@ video:
   enable: true
   showTitle: true
   title: video
-  url: https://b23.tv/kTyXzT# 必填
+  url: https://www.bilibili.com/video/BV1tx41157wv
   pic:
   thumbnails:
   height: # 如：400
